Fixe bug header not responsive

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -337,6 +337,20 @@ header {
 	}
 } 
 
+/* Fixe bug responsive */
+@media screen and (max-width: 1350px) {
+	header .navbar-nav .menu-item > a {
+		font-size: 13px;
+		letter-spacing: 0px;
+	}
+	header .navbar-nav .menu-item.btn.btn-light {
+		padding: 10px 5px;
+	}
+	header .navbar-nav .menu-item.dropdown a {
+		padding: 12px 5px;
+	}
+}
+
 //Bouton burger
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
 	color: black;
